// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadPullSecret /> with error should render 1`] = `
<Button
  isDisabled={true}
  onClick={[Function]}
  variant="secondary"
>
  Download pull secret
</Button>
`;

exports[`<DownloadPullSecret /> with token should render 1`] = `
<Download
  content="{\\"auths\\":{\\"foo\\":\\"bar\\"}}
"
  file="pull-secret"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <Button
    isDisabled={false}
    onClick={[Function]}
    variant="secondary"
  >
    Download pull secret
  </Button>
</Download>
`;
